<resources>
    <string name="app_name">Millelds</string>
    <string name="product_price">R$ %s</string>
    <string name="clicked_button">Clicou no botão</string>
    <string name="click_here">Clique aqui</string>
    <string name="product_name">Nome do produto</string>
    <string name="product_description">Descrição</string>
    <string name="price">Preço</string>
    <string name="register_product">Cadastrar produto</string>
    <string name="load">Carregar</string>
    <string name="image_url">URL da imagem</string>
    <string name="new_product">Novo produto</string>
    <string name="cart">Carrinho</string>
    <string name="seu_carrinho_est_vazio">Seu carrinho está vazio</string>
    <string name="total_cart_price">Total: %s</string>
    <string name="complete_order">Fechar pedido</string>
    <string name="order_completed_success">Pedido finalizado com sucesso!</string>
    <string name="order_number_title">Pedido #%s</string>
    <string name="quantity">Itens:</string>
    <string name="total">Total:</string>
    <string name="details">Detalhes</string>
    <string name="concluded">Concluído</string>
    <string name="orders_history">Histórico de pedidos</string>
    <string name="no_past_orders">Você ainda não fez\n nenhum pedido.</string>
</resources>