<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="12dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/orderNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/order_number_title" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            tools:text="03/05/2021"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/orderNumberTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/orderNumberTextView" />

        <TextView
            android:id="@+id/quantityLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/quantity"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderNumberTextView" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/quantityLabelTextView"
            app:layout_constraintStart_toEndOf="@id/quantityLabelTextView"
            app:layout_constraintTop_toTopOf="@+id/quantityLabelTextView"
            tools:text="2" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/totalPriceTextView"
            app:layout_constraintEnd_toStartOf="@id/totalPriceTextView"
            app:layout_constraintTop_toTopOf="@+id/totalPriceTextView"
            android:text="@string/total" />

        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/detailsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTextView"
            tools:text="R$ 19,90" />

        <Button
            android:id="@+id/detailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:elevation="8dp"
            android:text="@string/details"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityLabelTextView" />

        <TextView
            android:id="@+id/orderStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/concluded"
            app:layout_constraintBottom_toBottomOf="@+id/detailsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detailsButton" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/cardview_shadow_start_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>